--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     }
   },
   "dependencies": {
+    "ant-design-vue": "^3.0.0-beta.3",
     "axios": "^0.21.1",
     "element-plus": "^1.1.0-beta.7",
     "vue": "^3.2.6",
@@ -70,10 +71,24 @@
     "prettier": "^2.2.1",
     "stylus": "^0.54.8",
     "ts-jest": "^26.5.4",
-    "typescript": "^4.1.3",
+    "typescript": "^4.5.4",
     "vite": "^2.5.1",
     "vite-plugin-element-plus": "0.0.12",
     "vue-jest": "^5.0.0-alpha.7",
-    "vue-tsc": "^0.3.0"
+    "vue-tsc": "^0.3.0",
+    "vue3-markdown-it": "^1.0.10",
+    "vite-plugin-style-import": "^1.2.1",
+    "vant": "^3.2.2",
+    "unplugin-auto-import": "^0.6.4",
+    "unplugin-vue-components": "^0.18.0",
+    "qs": "^6.10.3",
+    "sass": "^1.49.9",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-emoji": "^2.0.0",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "dayjs": "^1.11.0",
+    "@types/markdown-it-emoji": "^2.0.2"
   }
 }
