--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-vue3-starter",
+  "name": "node-book",
   "version": "0.0.1",
   "private": false,
   "description": "A Vite2.x + Vue3 + TypeScript template starter",
@@ -24,12 +24,7 @@
     "TypeScript",
     "Starter"
   ],
-  "author": "XPoet",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/XPoet/vite-vue3-starter/issues"
-  },
-  "homepage": "https://github.com/XPoet/vite-vue3-starter#readme",
   "lint-staged": {
     "*.{vue,js,ts}": "eslint --fix"
   },
